--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,5 +1,5 @@
 .friendslistItem{
-    padding: 15px 10px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
